bridge/base/mongodb-deployment.yaml
#! mongodb-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb
    namespace: mustafo3
    labels:
        com.docker.compose.project: mustafo3
        com.docker.compose.service: mongodb
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: mustafo3
            com.docker.compose.service: mongodb
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: mustafo3
                com.docker.compose.service: mongodb
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: mongodb
                  image: mongo:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: mongodb-27017
                      containerPort: 27017
                  volumeMounts:
                    - name: data-db
                      mountPath: /data/db
                    - name: docker-entrypoint-initdb-d-init-mongo-js
                      mountPath: /docker-entrypoint-initdb.d/init-mongo.js
                      readOnly: true
            volumes:
                - name: data-db
                  persistentVolumeClaim:
                    claimName: mongodb-mongo-data
                - name: docker-entrypoint-initdb-d-init-mongo-js
                  hostPath:
                    path: C:\Users\Javier Medina\Desktop\Mustafo3\init-mongo.js
                  readOnly: true
