bridge/base/peniafiel-deployment.yaml
#! peniafiel-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: peniafiel
    namespace: mustafo3
    labels:
        com.docker.compose.project: mustafo3
        com.docker.compose.service: peniafiel
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: mustafo3
            com.docker.compose.service: peniafiel
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: mustafo3
                com.docker.compose.service: peniafiel
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: peniafiel
                  image: mustafo3-peniafiel
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: peniafiel-5000
                      containerPort: 5000
