bridge/base/peniafiel-expose.yaml
#! peniafiel-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: peniafiel
    namespace: mustafo3
    labels:
        com.docker.compose.project: mustafo3
        com.docker.compose.service: peniafiel
spec:
    selector:
        com.docker.compose.project: mustafo3
        com.docker.compose.service: peniafiel
    ports:
        - name: peniafiel-5000
          port: 5000
          targetPort: peniafiel-5000
