bridge/base/peniafiel-service.yaml
#! peniafiel-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: peniafiel-published
    namespace: mustafo3
    labels:
        com.docker.compose.project: mustafo3
        com.docker.compose.service: peniafiel
spec:
    selector:
        com.docker.compose.project: mustafo3
        com.docker.compose.service: peniafiel
    ports:
        - name: peniafiel-80
          port: 80
          protocol: TCP
          targetPort: peniafiel-5000
